--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1way.ca",
+  "name": "1way",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,12 +10,24 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "emoji-picker-react": "^4.4.9",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "firebase": "^9.23.0",
+    "moment": "^2.29.4",
+    "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.9.0",
+    "react-moment": "^1.1.3",
+    "react-simple-image-viewer": "^1.2.2",
+    "react-toastify": "^9.1.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "react-devtools": "^4.27.8",
+    "tailwindcss": "^3.3.2"
   }
 }
